--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+                <finalName>springboot-docker</finalName>
 	</build>
 
 </project>
